# boa

./: .gitignore  Cargo.toml
benches/: Cargo.toml
benches/scripts/microbench/: _README.md  array-numeric-sum.js  closure-capture.js  float-arith.js  fn-call-flat.js  global-counter.js  int-arith.js  method-call-mono.js  object-create-literal.js  property-mega.js  property-mono.js  property-poly2.js  property-poly4.js  property-set-mono.js  recursion-fib.js  string-concat.js
core/ast/src/: scope.rs
core/engine/: Cargo.toml
core/engine/src/: lib.rs  script.rs
core/engine/src/builtins/: builder.rs  mod.rs
core/engine/src/builtins/function/: mod.rs
core/engine/src/bytecompiler/: class.rs  generator.rs  jump_control.rs  mod.rs
core/engine/src/error/: mod.rs
core/engine/src/jit/: mod.rs
core/engine/src/module/: mod.rs
core/engine/src/object/: jsobject.rs
core/engine/src/object/shape/: mod.rs  (+1 more)
core/engine/src/tests/: mod.rs  operators.rs
core/engine/src/value/: mod.rs  operations.rs
core/engine/src/vm/: arith_instrument.rs  code_block.rs  mod.rs  tests.rs
core/jit/: Cargo.toml
core/jit/src/: lib.rs
core/parser/: Cargo.toml
core/parser/src/parser/: mod.rs
planning/js-performance-roadmap/: 01-measurement-methodology.md  02-call-path.md  03-bytecode-specialization.md  03a-arith-opportunity-findings.md  03b-arith-quickening-negative-result.md  04-inline-caches.md  05-dispatch.md  06-gc-and-allocation.md  07-strings.md  08-beyond-the-interpreter-jit.md  09-cranelift-jit.md  README.md
tools/bench-compare/: BASELINE.md  compare.sh  runner.mjs
(+31 files in other folders)
