[package]
name = "boa_jit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Cranelift-based JIT tier for the Boa JavaScript engine."
publish = false

[dependencies]
cranelift-codegen = "0.130.2"
cranelift-frontend = "0.130.2"
cranelift-jit = "0.130.2"
cranelift-module = "0.130.2"
cranelift-native = "0.130.2"
